--- a/BiBi_seq.ipynb
+++ b/BiBi_seq.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPu/iUSTfTtf/7eDnjn0UXN",
+      "authorship_tag": "ABX9TyN/HIUVZ84A6EWV/NX3MZI/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "L2txQeo1nmbL"
       },
@@ -65,7 +65,39 @@
       "metadata": {
         "id": "mVdZmp0pykRZ"
       },
-      "execution_count": 10,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "From Marangoni, Alejandro G., Enzyme kinetics : A modern approach 2003, Wiley\n",
+        "![picture](https://drive.google.com/uc?id=1O0xGxA6dXDYqd7YwHS34M44RhqHXIyII)\n",
+        "Random order sequential reaction"
+      ],
+      "metadata": {
+        "id": "W6sembvVSeuC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#MM 2 substrate sequential random ordered rate function\n",
+        "def BiBi_random(X,  Vmax, Ks_A, Ks_B, K_AB, K_BA):\n",
+        "\n",
+        "  C_A = np.hsplit(X, len(X[0]))[0]\n",
+        "  C_B = np.hsplit(X, len(X[0]))[1]\n",
+        "\n",
+        "  nom = C_A * C_B * Vmax\n",
+        "  den = Ks_A * K_AB + K_AB * C_A + K_BA * C_B + C_A * C_B\n",
+        "\n",
+        "  Vi = nom/den\n",
+        "  return Vi.flatten()"
+      ],
+      "metadata": {
+        "id": "uD7D3mgfT1NG"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +133,7 @@
       "metadata": {
         "id": "Loq_ZtXd2Z2d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -125,7 +157,7 @@
         "id": "pDaM4n9p4Wk4",
         "outputId": "661a4f45-782f-4556-d0ac-7f9f98d30657"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,7 +188,7 @@
       "metadata": {
         "id": "m43chljsxbl8"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +224,7 @@
         "id": "HdSf3TW1up11",
         "outputId": "3fece4e2-4c97-4662-c568-f649ee38d94d"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -240,7 +272,7 @@
         "id": "pIkBoqwOwnJG",
         "outputId": "2c0d11a4-d9a1-4b66-d1d7-2816ef93609c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -288,7 +320,7 @@
         },
         "outputId": "cca744b3-44d7-43a8-8e43-76b650763d71"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -320,7 +352,7 @@
       "metadata": {
         "id": "7K3hw5s0aL0v"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     }
   ]
