Oprettet ved hjælp af Colaboratory

--- a/BiBi_seq.ipynb
+++ b/BiBi_seq.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPunPofXDp6+RQfGMiJWseL",
+      "authorship_tag": "ABX9TyM99yPiwdQBvOPvYFvLMDcV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "L2txQeo1nmbL"
       },
@@ -65,7 +65,7 @@
       "metadata": {
         "id": "mVdZmp0pykRZ"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "uD7D3mgfT1NG"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -131,7 +131,7 @@
       "metadata": {
         "id": "u-mTrYfGJsTT"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -151,7 +151,7 @@
       "metadata": {
         "id": "J4X3hDpQ_GfB"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,7 +178,7 @@
         "id": "O6XCwNbPLvwt",
         "outputId": "f352abfd-b46b-4583-f87a-ddfe8ce20bda"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -700,7 +700,7 @@
       "metadata": {
         "id": "NyLS5E3SQyRp"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -718,7 +718,7 @@
         "id": "Iyio8tbwQ6x9",
         "outputId": "2ff82d28-b650-491d-d99f-2784d32d1414"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1066,7 +1066,7 @@
         },
         "outputId": "fc081159-6ecd-496f-9379-92bc90429027"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1113,7 +1113,7 @@
         "id": "pDaM4n9p4Wk4",
         "outputId": "15cd0880-b1d4-4c7f-af78-f9576c79e54a"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1296,7 +1296,7 @@
         "id": "r1jQqyF3f5QR",
         "outputId": "0fd6c78f-f02f-437a-9e04-135de30b5b78"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1320,7 +1320,7 @@
         "id": "lixnAlcdhbQn",
         "outputId": "6d4dc3cf-8598-495d-a138-a914ecd2e5cc"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1823,7 +1823,7 @@
         "id": "AsgXBHYqloN1",
         "outputId": "01c83c20-abd4-4b0d-996f-dcf4774258b1"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2173,7 +2173,7 @@
         "id": "gEEJifTIWG_n",
         "outputId": "777990e8-16e8-4c54-e22c-e251767c098c"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2524,7 +2524,7 @@
         "id": "7Q93BQxPWMo7",
         "outputId": "471bcf62-f8ae-419a-8240-2ab1dcaf6b90"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2874,7 +2874,7 @@
           "height": 269
         }
       },
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3216,7 +3216,7 @@
         "plt.rcParams[\"figure.figsize\"] = (10, 10)\n",
         "velocities.T.plot(yerr = velocities_esds.T, capsize = 5, ecolor = None,)\n",
         "plt.xlabel(\"Concentrations\")\n",
-        "plt.ylabel(\"v uM/min\")\n",
+        "plt.ylabel(\"v nM/min\")\n",
         "plt.title(\"ASMT velocities as function of SAM and NAS concentrations\")\n",
         "\n",
         "plt.tight_layout()\n",
@@ -3230,7 +3230,7 @@
         "id": "ecPrV6TFhruw",
         "outputId": "8a088f51-8482-4a1b-893d-0a9455cc2143"
       },
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
